Uploaded image for project: 'Couchbase Server'
  1. Couchbase Server
  2. MB-50316

numOpsGet not update for successful gets in EventuallyPersistentEngine::getInner()

    XMLWordPrintable

Details

    • 1
    • Yes
    • KV Post-Neo (April)

    Description

      This is a production bug rather than test issue. We are not updating numOpsGet anymore for the gets made in this test (gets made via EventuallyPersistentEngine::getInner()). If the WorkLoadMonitor runs after the sets during the test and before all of the sets then it's possible to change the workload to write_heavy and not change it back. This is a regression introduced by this change https://review.couchbase.org/c/kv_engine/+/139024/7/engines/ep/src/ep_engine.cc#b2417.

      Original manifestation:

      http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/16363/

      Failure of an engine_testapp test:
      Running [0103/0159]: test multiple vb compactions with workload...Exceeded maximum wait time of 60000000us waiting for stat 'ep_workload_pattern' to be read_heavy (last value:write_heavy) - aborting.
      

      Attachments

        For Gerrit Dashboard: MB-50316
        # Subject Branch Project Status CR V

        Activity

          People

            trond Trond Norbye
            trond Trond Norbye
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes

                PagerDuty