MB-50316: Update numOpsGet on successful get via getInner()

Successful gets via EventuallyPersistentEngine::getInner() do not
update numOpsGet because of a regression introduced in a refactor
change here:
https://review.couchbase.org/c/kv_engine/+/139024/7/engines/ep/src/ep_engine.cc#b2417

Correct this.

Change-Id: Id1d38648cfb0acf9730133217fc1006438b5583f
Reviewed-on: https://review.couchbase.org/c/kv_engine/+/173439
Tested-by: Build Bot <build@couchbase.com>
Reviewed-by: Dave Rigby <daver@couchbase.com>